syntax="proto3";

package protocs;

option go_package="services/room/commons/pb";

message Room{
    uint64 id=1;
    string roomName=2;
    string addres=3;
    string city=4;
    string province=5;
    string descriptions=6;
    string owner=7;
    uint32 type=8;
    string createdAt=9;
    string updatedAt=10;

}

message CreateRoomRequest{
    Room room=1;
}

message CreateRoomResponse{
    Room room=1;
}

message GetRoomsRequest{

}

message GetRoomsResponse{
    Room room=1;
}

message GetRoomByIDRequest{
    uint64 room_id=1;
}

message GetRoomByIDResponse{
    Room room=1;
}

message UpdateRoomByIDRequest{
    Room room=1;
}

message UpdateRoomByIDResponse{
    Room room=1;
}

message DeleteRoomRequest{
    uint64 room_id=1;
}

message DeleteRoomResponse{
    uint64 room_id=1;
}


service roomService{
    rpc SaveRoom(CreateRoomRequest) returns(CreateRoomResponse){};
    rpc GetRooms(GetRoomsRequest) returns (stream GetRoomsResponse){};
    rpc GetRoomByID(GetRoomByIDRequest) returns (GetRoomByIDResponse){} ;
    rpc UpdateRoomByID(UpdateRoomByIDRequest) returns (UpdateRoomByIDResponse){};
    rpc DeleteRoom (DeleteRoomRequest) returns (DeleteRoomResponse){};
    
    
}